--- a/Views/Railway/AboutUs.cshtml
+++ b/Views/Railway/AboutUs.cshtml
@@ -8,13 +8,7 @@
     <div class="row position-relative" style="z-index:1">
         <div class="brand-banner col-12 position-fixed top-0 w-100" style="z-index:0"></div>
         <div class="col-6 mx-auto bg-white rounded" style="box-shadow: 0 0 10px rgba(0,0,0,.3);margin-top:110px;border-radius: 8px; padding: 35px 40px; z-index:1 ">
-            <div class="login-header">
-                <h5 class="mb-3 text-orange fw-medium">Need help with recent bookings?</h5>
-                    <a href="" class="btn btn-orange" role="button">
-                        Login
-                    </a>
-            </div>
-            <div class="about-section d-flex flex-column" style="padding-top: 10px;">
+            <div class="about-section d-flex flex-column" >
                 <div class="">
                     <span class="mb-3 text-orange fs-4">About Ease Train</span>
                 </div>
@@ -57,8 +51,8 @@
                                         &amp;
                                         <br>Terms Of Use:
                                     </span><a class="link"
-                                              href="https://www.ixigo.com/about/more-info/terms-of-use/"
-                                              target="_blank">https://www.ixigo.com/about/more-info/terms-of-use/</a><span></span>
+                                      asp-action="PrivatePolicy"
+                                      target="_blank">Terms Of Use</a><span></span>
                             </div>
                         </div>
                         
